# Sentiment_Analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml  sentiment_analysis.py  voice_to_text_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: test.yaml
app/: README.md  voice_to_text_app.py
gradio_apps/: README.md  app.py  requirements.txt
modules/: data_preprocess.py  load_data.py  model.py  model_bert_other.py  text_vecto.py
src/: sentiment_analysis.py  sentiment_analysis_bert_other.py  translation_french_english.py
src/configurations/: model_builder_config.json  model_trainer_config.json  optuna_config.json
src/modules/: data_preprocess_nltk.py  data_processor.py  load_data.py  mem_reduction.py  model.py  model_bert_other.py  model_sentiment_analysis.py  optuna_transformer.py  sentiment_analysis_utils.py  speech_to_text.py  text_vectorizer.py  text_vectorizer_sentiment_analysis.py  transformer_components.py  utils.py
src/scripts/: README.md  check_data_parquet.py  data_processor.py  loading_kaggle_dataset_script.py  loading_kaggle_dataset_utils.py
tests/: test_data_processor.py  test_load_data.py  test_model.py  test_text_vectorizer.py  test_transformer_model.py  test_utils.py
