[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Jeremy Vachier"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.1.post1"
datetime = "^5.4"
statsmodels = "^0.14.1"
pylint = "^3.0.3"
scikit-optimize = "^0.9.0"
black = "^24.1.1"
ruff = "^0.2.1"
pyarrow = "^15.0.0"
wheel = "^0.45.1"
dm-tree = "^0.1.8"
tfds-nightly = "^4.9.7.dev202503080044"
keras = "^3.9.0"
nltk = "^3.9.1"
transformers = "^4.49.0"
optuna = "^4.2.1"
dash = "^2.18.2"
tensorflow = "^2.16.2"
pytest = "^8.3.5"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
kagglehub = "^0.3.11"
kaggle = "^1.7.4.2"

[tool.poetry.group.macos.dependencies]
tensorflow-io-gcs-filesystem = "<0.35.0"
tensorflow-metal = "^1.2.0"
tensorflow-macos = "^2.16.2"

[tool.poetry.group.pyaudio.dependencies]
vosk = "0.3.44"
pyaudio = "^0.2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
