[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Sentiment Analysis and Translation with Speech-to-Text"
authors = [
    {name = "Jeremy Vachier"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "scikit-learn>=1.4.1",
    "statsmodels>=0.14.1",
    "pyarrow>=15.0.0",
    "wheel>=0.45.1",
    "dm-tree>=0.1.8",
    "tfds-nightly>=4.9.7.dev202503080044",
    "keras>=3.9.0",
    "nltk>=3.9.1",
    "transformers>=4.49.0",
    "optuna>=4.2.1",
    "dash>=2.18.2",
    "tensorflow>=2.16.2",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "polars>=1.27.1",
    "vosk>=0.3.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pylint>=3.0.3",
    "black>=24.1.1",
    "ruff>=0.2.1",
    "scikit-optimize>=0.9.0",
]
macos = [
    "tensorflow-io-gcs-filesystem<0.35.0",
    "tensorflow-metal>=1.2.0",
    "tensorflow-macos>=2.16.2",
]
audio = [
    "vosk==0.3.44",
    "pyaudio>=0.2.14",
]
kaggle = [
    "kagglehub>=0.3.11",
    "kaggle>=1.7.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]
